Проблемы со стилизации формы

--- a/cataog-tech.html
+++ b/cataog-tech.html
@@ -77,7 +77,7 @@
 								<h2 class="visually-hidden">Фильтр шаблонов</h2>
 								<form method="get" action="https://echo.htmlacademy.ru">
 									<fieldset class="filter-item">
-										<legend class="legend">Цена</legend>
+										<legend class="legend">Цена:</legend>
 										<div class="range-filter" id="range-filter">  
 										</div>
 										<div class="price-controls">
@@ -169,30 +169,6 @@
 										</div>
 									</div>
 									<div class="col-4">
-										<div class="goods-list-item">
-											<img src="img/bfg_3000.png" width="184" height="164" alt="Изображение перфоратора">
-											<h3>Перфоратор&#160;BOSCH BFG&#160;3000</h3>
-											<p class="first-price">22500р.</p>
-											<p class="last-price">15500р.</p>
-											<div class="buttons">
-												<button class="button to-buy">Купить</button>
-												<button class="button to-bookmarks">В закладки</button>
-											</div>
-										</div>
-									</div>
-									<div class="col-4">
-										<div class="goods-list-item">
-											<img src="img/bfg_6000.png" width="184" height="164" alt="Изображение перфоратора">
-											<h3>Перфоратор&#160;BOSCH BFG&#160;6000</h3>
-											<p class="first-price">30500р.</p>
-											<p class="last-price">25500р.</p>
-											<div class="buttons">
-												<button class="button to-buy">Купить</button>
-												<button class="button to-bookmarks">В закладки</button>
-											</div>
-										</div>
-									</div>
-									<div class="col-4">
 										<div class="goods-list-item new">
 											<img src="img/bfg_2000.png" width="184" height="164" alt="Изображение перфоратора">
 											<h3>Перфоратор&#160;BOSCH BFG&#160;2000</h3>
@@ -216,6 +192,41 @@
 										</div>
 									</div>
 									<div class="col-4">
+										<div class="goods-list-item new">
+											<img src="img/bfg_6000.png" width="184" height="164" alt="Изображение перфоратора">
+											<h3>Перфоратор&#160;BOSCH BFG&#160;6000</h3>
+											<p class="first-price">30500р.</p>
+											<p class="last-price">25500р.</p>
+											<div class="buttons">
+												<button class="button to-buy">Купить</button>
+												<button class="button to-bookmarks">В закладки</button>
+											</div>
+										</div>
+									</div>
+									<div class="col-4">
+										<div class="goods-list-item">
+											<img src="img/bfg_2000.png" width="184" height="164" alt="Изображение перфоратора">
+											<h3>Перфоратор&#160;BOSCH BFG&#160;2000</h3>
+											<p class="last-price">12500р.</p>
+											<div class="buttons">
+												<button class="button to-buy">Купить</button>
+												<button class="button to-bookmarks">В закладки</button>
+											</div>
+										</div>
+									</div>
+									<div class="col-4">
+										<div class="goods-list-item new">
+											<img src="img/bfg_3000.png" width="184" height="164" alt="Изображение перфоратора">
+											<h3>Перфоратор&#160;BOSCH BFG&#160;3000</h3>
+											<p class="first-price">22500р.</p>
+											<p class="last-price">15500р.</p>
+											<div class="buttons">
+												<button class="button to-buy">Купить</button>
+												<button class="button to-bookmarks">В закладки</button>
+											</div>
+										</div>
+									</div>
+									<div class="col-4">
 										<div class="goods-list-item">
 											<img src="img/bfg_6000.png" width="184" height="164" alt="Изображение перфоратора">
 											<h3>Перфоратор&#160;BOSCH BFG&#160;6000</h3>
@@ -228,7 +239,7 @@
 										</div>
 									</div>
 									<div class="col-4">
-										<div class="goods-list-item new">
+										<div class="goods-list-item">
 											<img src="img/bfg_2000.png" width="184" height="164" alt="Изображение перфоратора">
 											<h3>Перфоратор&#160;BOSCH BFG&#160;2000</h3>
 											<p class="last-price">12500р.</p>
@@ -238,7 +249,6 @@
 											</div>
 										</div>
 									</div>
-								</div>
 							</section>
 							<div class="pagination-container">
 								<ul class="pagination-list">
