--- a/index-tech.html
+++ b/index-tech.html
@@ -272,7 +272,7 @@
 							заехав&#160;в&#160;наш&#160;офис:
 							</p>
 							<img class="map" src="img/map.png" width="300" height="158" alt="Расположение офиса на карте">
-							<button>Заблудились? Напишите нам!</button>
+							<a class="write-us">Заблудились? Напишите нам!</a>
 						</div>
 					</div>
 				</div>
@@ -338,7 +338,7 @@
 				</div>
 			</div>
 		</footer>
-		<section class="modal modal-login">
+		<section class="modal modal-write-us">
 			<form class="message-form" action="https://echo.htmlacademy.ru" method="post">	<div class="modal-top-container">
 					<p class="modal-description">
 				      <label for="user-name">Ваше имя:</label>
@@ -346,7 +346,7 @@
 				    </p>
 				    <p class="modal-description">
 				      <label for="user-mail">Ваш e-mail:</label>
-				      <input  id="user-mail" type="text" name="e-mail" placeholder="email@example.com">
+				      <input  id="user-mail" type="text" name="email" placeholder="email@example.com">
 				    </p>
 				    <p class="modal-description letter-text">
 					    <label for="user-text">Текст письма:</label>
