Исправлена сетка на 1-й странице

--- a/cataog-tech.html
+++ b/cataog-tech.html
@@ -75,6 +75,7 @@
 						<div class="col-3">
 							<section class="filters">
 								<h2 class="visually-hidden">Фильтр шаблонов</h2>
+								<span class="span-filter">Фильтр</span>
 								<form method="get" action="https://echo.htmlacademy.ru">
 									<fieldset class="filter-item">
 										<legend class="legend">Цена:</legend>
@@ -111,7 +112,7 @@
 							            </ul>
 							        </fieldset>
 									<fieldset class="filter-item">
-									    <legend class="legend">Питание:</legend>
+									    <legend class="legend nutrition">Питание:</legend>
 										<ul class="filter-group">
 								            <li>
 								                <input class="visually-hidden" type="radio" name="radio" id="filter-slider" checked>
