--- a/index-tech.html
+++ b/index-tech.html
@@ -172,32 +172,30 @@
 					<a href="#">Все производители</a>
 				</div>
 					<div class="row">
-						<ul class="producers-list">
-							<div class="col-3">
-								<li><a class="producers-item" href="#"><img src="img/logo_1.png" width="220" height="145" alt="логотип Bosch"><span class="visually-hidden">Bosch</span></a></li>
-							</div>
-							<div class="col-3">
-								<li><a class="producers-item" href="#"><img src="img/logo_2.png" width="220" height="145" alt="логотип Makita"></a><span class="visually-hidden">Makita</span></li>
-							</div>
-							<div class="col-3">
-								<li><a class="producers-item" href="#"><img src="img/logo_3.png" width="220" height="145" alt="логотип DeWALT"></a><span class="visually-hidden">DeWALT</span></li>
-							</div>
-							<div class="col-3">
-								<li><a class="producers-item" href="#"><img src="img/logo_4.png" width="220" height="145" alt="логотип Интерскол"></a><span class="visually-hidden">Интерскол</span></li>
-							</div>
-							<div class="col-3">
-								<li><a class="producers-item" href="#"><img src="img/logo_5.png" width="220" height="145" alt="логотип Hitachi"><span class="visually-hidden">Hitachi</span></a></li>
-							</div>
-							<div class="col-3">
-								<li><a class="producers-item" href="#"><img src="img/logo_6.png" width="220" height="145" alt="логотип LG"></a><span class="visually-hidden">LG</span></li>
-							</div>
-							<div class="col-3">
-								<li><a class="producers-item" href="#"><img src="img/logo_7.png" width="220" height="145" alt="логотип AEG"></a><span class="visually-hidden">AEG</span></li>
-							</div>
-							<div class="col-3">
-								<li><a class="producers-item" href="#"><img src="img/logo_8.png" width="220" height="145" alt="логотип Metabo"></a><span class="visually-hidden">Metabo</span></li>
-							</div>
-						</ul>
+						<div class="col-3">
+							<a class="producers-item" href="#"><img src="img/logo_1.png" width="220" height="145" alt="логотип Bosch"><span class="visually-hidden">Bosch</span></a>
+						</div>
+						<div class="col-3">
+							<a class="producers-item" href="#"><img src="img/logo_2.png" width="220" height="145" alt="логотип Makita"></a><span class="visually-hidden">Makita</span>
+						</div>
+						<div class="col-3">
+							<a class="producers-item" href="#"><img src="img/logo_3.png" width="220" height="145" alt="логотип DeWALT"></a><span class="visually-hidden">DeWALT</span>
+						</div>
+						<div class="col-3">
+							<a class="producers-item" href="#"><img src="img/logo_4.png" width="220" height="145" alt="логотип Интерскол"></a><span class="visually-hidden">Интерскол</span>
+						</div>
+						<div class="col-3">
+							<a class="producers-item" href="#"><img src="img/logo_5.png" width="220" height="145" alt="логотип Hitachi"><span class="visually-hidden">Hitachi</span></a>
+						</div>
+						<div class="col-3">
+							<a class="producers-item" href="#"><img src="img/logo_6.png" width="220" height="145" alt="логотип LG"></a><span class="visually-hidden">LG</span>
+						</div>
+						<div class="col-3">
+							<a class="producers-item" href="#"><img src="img/logo_7.png" width="220" height="145" alt="логотип AEG"></a><span class="visually-hidden">AEG</span>
+						</div>
+						<div class="col-3">
+							<a class="producers-item" href="#"><img src="img/logo_8.png" width="220" height="145" alt="логотип Metabo"></a><span class="visually-hidden">Metabo</span>
+						</div>
 					</div>
 				</div>
 			</section>
@@ -206,8 +204,8 @@
 					<h2 class="visually-hidden">Сервисы</h2>
 					<div class="promo">
 						<h3>Сервисы</h3>
-						<p>Хороший интернет-магазин отличается от плохого не только ценами!
-						Мы стараемся изо всех сил, чтобы сделать ваши покупки приятными.
+						<p>Хороший интернет-магазин отличается от плохого не только&#160;ценами!
+						Мы&#160;стараемся&#160;изо всех сил, чтобы сделать ваши покупки приятными.
 						</p>
 					</div>
 					<div class="row">
@@ -272,7 +270,7 @@
 							заехав&#160;в&#160;наш&#160;офис:
 							</p>
 							<img class="map" src="img/map.png" width="300" height="158" alt="Расположение офиса на карте">
-							<a class="write-us">Заблудились? Напишите нам!</a>
+							<a href="#" class="write-us">Заблудились? Напишите нам!</a>
 						</div>
 					</div>
 				</div>
